--- a/gestione_notifiche.html
+++ b/gestione_notifiche.html
@@ -37,10 +37,11 @@
   	<body>
 		<!-- Title bar -->
 		<header class="bar bar-nav">
-  			<h1 class="title">Gestione Notifiche</h1>
+  			<h1 class="title">Centro Notifiche</h1>
 		</header>
 
 			<div class="content spazio-nav">
+				<div class="card">
 			<ul class="table-view">
   				<li class="table-view-cell">
 
@@ -72,6 +73,7 @@
   					  </a>
 			  </li>
 		  </ul>
+	  </div>
 		</div>
 
 
