--- a/menuNavBar.html
+++ b/menuNavBar.html
@@ -50,7 +50,7 @@
 			<a href="gestione_notifiche.html">
 				<button class="btn btn-positive btn-block">
 					<span class="icon icon-list"></span>
-					Cronologia Notifiche
+					Centro Notifiche
 				</button>
 			</a>
 
