--- a/navigation.html
+++ b/navigation.html
@@ -56,7 +56,7 @@
 				<div class="segmented-control">
 				    <a id="aulebar" class="control-item active">Aule</a>
 				    <a id="followerbar" class="control-item">Follower</a>
-				    <a class="control-item">Professori</a>
+				    <a id="profbar" class="control-item">Professori</a>
 					<a class="control-item">Uffici</a>
 		  		</div>
 			</div>
