--- a/profile_prof_visitato.html
+++ b/profile_prof_visitato.html
@@ -35,9 +35,10 @@
   	</head>
   	<body>
 
-		<header class="bar bar-nav">
-  			<h1 class="title">Costanzo Manes</h1>
-		</header>
+		        <header class="bar bar-nav">
+		            <a class="icon icon-left-nav pull-left" href="navigation.html"></a>
+		            <h1 class="title">Costanzo Manes</h1>
+		        </header>
 
 
 		<div class="content spazio-nav">
@@ -94,7 +95,7 @@
 							<li class="table-view-cell pulito">
 								<a>
 								   <span class="media-object pull-left icon icon-pages"></span>
-									Ricevi Notifiche
+									Ricevi Notifiche Intelligenti
 									<div class="toggle">
       			   						<div class="toggle-handle"></div>
     								</div>
