--- a/navigation.html
+++ b/navigation.html
@@ -57,7 +57,7 @@
 				    <a id="aulebar" class="control-item active">Aule</a>
 				    <a id="followerbar" class="control-item">Follower</a>
 				    <a id="profbar" class="control-item">Professori</a>
-					<a class="control-item">Uffici</a>
+					<a id="ufficiobar" class="control-item">Uffici</a>
 		  		</div>
 			</div>
 			<div data-role="collapsible-set" data-collapsed-icon="arrow-r" data-expanded-icon="arrow-d">
