--- a/navigation.html
+++ b/navigation.html
@@ -64,10 +64,10 @@
 
 				<div data-role="collapsible">
 
-					<h3>Polo Coppito</h3>
+					<h3>Polo Coppito<span class="infoFollowersNavigation" id="infoFollowersNavigation" hidden>6</span></h3>
 
 					<div data-role="collapsible">
-			        	<h3>Coppito 0</h3>
+			        	<h3>Coppito 0<span class="infoFollowersNavigation" id="poloCoppito0Followers" hidden>2</span></h3>
 
 						<div data-role="collapsible">
 				        	<h3>Piano 0</h3>
@@ -84,10 +84,10 @@
 			    	</div>
 
 					<div  data-role="collapsible">
-			        	<h3 id="coppito1">Coppito 1</h3>
+			        	<h3>Coppito 1<span class="infoFollowersNavigation" id="poloCoppito1Followers" hidden>2</span></h3>
 
 						<div data-role="collapsible">
-				        	<h3>Piano 0</h3>
+				        	<h3>Piano 0 <span class="infoFollowersNavigation" id="poloCoppito1Piano0Followers" hidden>2</span></h3>
 							<div id="P0Coppito1">
 							</div>
 				    	</div>
@@ -106,7 +106,7 @@
 			    	</div>
 
 					<div data-role="collapsible">
-			        	<h3>Coppito 2</h3>
+			        	<h3>Coppito 2<span class="infoFollowersNavigation" id="poloCoppito2Followers" hidden>2</span></h3>
 			    	</div>
 
 	    		</div>
