--- a/profile_prof_visitato.html
+++ b/profile_prof_visitato.html
@@ -5,7 +5,7 @@
 				<li class="card pulito">
 					<img class="imageProfile profilo-image" src="img/manes.jpg">
 
-					<span class="media-object pull-left  "><img class="email-icon" src="./img/email-icon.png"></span>
+					<span class="media-object pull-left "><img class="email-icon" src="./img/email-icon.png"></span>
 					<div class="media-body email-text">
 						E-mail:  costanto.manes@univaq.it
 					</div>
@@ -43,7 +43,7 @@
 							</li>
 
 						 	<li class="table-view-cell pulito">
-								<a class="navigate-right"  href="selectPole.html" data-transition="slide">
+								<a class="navigate-right"  href="corsiProf.html" data-transition="slide">
 						    		<span class="media-object pull-left icon icon-pages"></span>
 						      		<div class="media-body">
 						        	Corsi tenuti
