--- a/menuNavBar.html
+++ b/menuNavBar.html
@@ -56,7 +56,7 @@
 
 
 			<a href="selezionaProfAvvistamento.html">
-				<button class="btn btn-negative btn-block">
+				<button class="btn btn-negative btn-block avvistaProfButton">
 					<span class="icon icon-search"></span>
 					Avvista Prof
 				</button>
