--- a/profile.html
+++ b/profile.html
@@ -37,6 +37,7 @@
 
 		<!-- Title bar -->
 		<header class="bar bar-nav">
+		    <a class="icon icon-left-nav pull-left" data-transition="slide" data-direction="reverse" href="navigation.html"></a>
   			<h1 class="title">Matteo Polsinelli</h1>
 		</header>
 
