ACCORDION SCROLL TO POSITION

--- a/navigation.html
+++ b/navigation.html
@@ -89,16 +89,16 @@
 			    	</div>
 
 					<div  data-role="collapsible">
-			        	<h3>Coppito 1<span class="infoFollowersNavigation" id="poloCoppito1Followers" hidden>2</span></h3>
+			        	<h3 id="Coppito_1">Coppito 1<span class="infoFollowersNavigation" id="poloCoppito1Followers" hidden>2</span></h3>
 
 						<div data-role="collapsible">
-				        	<h3>Piano 0 <span class="infoFollowersNavigation" id="poloCoppito1Piano0Followers" hidden>2</span></h3>
+				        	<h3 id="P0_C1" >Piano 0 <span class="infoFollowersNavigation" id="poloCoppito1Piano0Followers" hidden>2</span></h3>
 							<div id="P0Coppito1">
 							</div>
 				    	</div>
 
 						<div data-role="collapsible" >
-				        	<h3>Piano 1</h3>
+				        	<h3 id="P1_C1">Piano 1</h3>
 							<div id="P1Coppito1">
 							</div>
 				    	</div>
