--- a/menuNavBar.html
+++ b/menuNavBar.html
@@ -87,7 +87,7 @@
 				</span>
 			    <span class="tab-label">Followers</span>
 			</a>
-			<a class="tab-item active" href="">
+			<a class="tab-item tab-item-selected" href="">
 				<span class="icon icon-bars"></span>
 			    <span class="tab-label">Menu</span>
 			</a>
