--- a/ricerca.html
+++ b/ricerca.html
@@ -211,7 +211,7 @@
 				<span class="icon icon-person"></span>
 			    <span class="tab-label">Profilo</span>
 			</a>
-			<a class="tab-item" href="#">
+			<a class="tab-item tab-item-selected" href="#">
 				<span class="icon icon-search"></span>
 			    <span class="tab-label">Cerca</span>
 			</a>
