modifica icona accordion

--- a/navigation.html
+++ b/navigation.html
@@ -65,7 +65,7 @@
 
 			<!-- Accordion -->
 			
-			<div id="accordionmenu" data-role="collapsible-set" data-collapsed-icon="arrow-r" data-expanded-icon="arrow-d">
+			<div id="accordionmenu" data-role="collapsible-set" data-collapsed-icon="carat-r" data-expanded-icon="carat-d">
 
 				<div data-role="collapsible">
 
