--- a/profile.html
+++ b/profile.html
@@ -88,7 +88,7 @@
 						    </a>
 						 </li>
 						 <li class="table-view-cell pulito">
-							<a class="navigate-right"  href="selectPole.html" data-transition="slide">
+							<a class="navigate-right"  href="corsiSeguiti.html" data-transition="slide">
 						    	<span class="media-object pull-left icon icon-pages"></span>
 						      	<div class="media-body">
 						        Corsi seguiti
