--- a/navigation.html
+++ b/navigation.html
@@ -20,7 +20,7 @@
 
 
 		<link href="libs/SnapJs/snap.css" rel="stylesheet">
-		<link href="css/accordion.css" rel="stylesheet">
+		
 		<link href="css/profile.css" rel="stylesheet">
 
 
@@ -38,6 +38,7 @@
 	    	});
 		</script>
 		<script src="libs/jquery.mobile.custom/jquery.mobile.custom.min.js"></script>
+		<link href="css/accordion.css" rel="stylesheet">
 
   	</head>
   	<body>
@@ -67,9 +68,9 @@
 			
 			<div id="accordionmenu" data-role="collapsible-set" data-collapsed-icon="carat-r" data-expanded-icon="carat-d">
 
-				<div data-role="collapsible">
+				<div  data-role="collapsible">
 
-					<h3>Polo Coppito<span class="infoFollowersNavigation" id="infoFollowersNavigation" hidden>6</span></h3>
+					<h3 class="bordo_verde" >Polo Coppito <span class="infoFollowersNavigation" id="infoFollowersNavigation" hidden>6</span></h3>
 
 					<div data-role="collapsible">
 			        	<h3>Coppito 0<span class="infoFollowersNavigation" id="poloCoppito0Followers" hidden>2</span></h3>
@@ -89,10 +90,10 @@
 			    	</div>
 
 					<div  data-role="collapsible">
-			        	<h3 id="Coppito_1">Coppito 1<span class="infoFollowersNavigation" id="poloCoppito1Followers" hidden>2</span></h3>
+			        	<h3 class="bordo_verde" id="Coppito_1">Coppito 1<span class="infoFollowersNavigation" id="poloCoppito1Followers" hidden>2</span></h3>
 
 						<div data-role="collapsible">
-				        	<h3 id="P0_C1" >Piano 0 <span class="infoFollowersNavigation" id="poloCoppito1Piano0Followers" hidden>2</span></h3>
+				        	<h3 class="bordo_verde" id="P0_C1" >Piano 0 <span class="infoFollowersNavigation" id="poloCoppito1Piano0Followers" hidden>2</span></h3>
 							<div id="P0Coppito1">
 							</div>
 				    	</div>
