--- a/www/menuNavBar.html
+++ b/www/menuNavBar.html
@@ -40,25 +40,32 @@
 		</header>
 
 		<div class="content">
-
-			<a href="profile.html">
-				<button class="btn btn-primary btn-block prova">
-					<span class="icon icon-gear"></span>
-					Gestione Profilo
-				</button>
-			</a>
-
-			<a href="lista_poli_per_gestione.html">
-				<button class="btn btn-primary btn-block prova">
-					<span class="icon icon-gear"></span>
-					Gestione Poli
-				</button>
-			</a>
-
-			<button class="btn btn-negative btn-block">
-				<span class="icon icon-search"></span>
-				Log Out
-			</button>
+			<ul class="table-view">
+				<li class="table-view-cell media">
+				    <a class="navigate-right" href="profile.html">
+				      <span class="media-object pull-left icon icon-gear"></span>
+				      <div class="media-body">
+				        Gestione Profilo
+				      </div>
+				    </a>
+	  			</li>
+				<li class="table-view-cell media">
+				    <a class="navigate-right" href="lista_poli_per_gestione.html">
+				      <span class="media-object pull-left icon icon-gear"></span>
+				      <div class="media-body">
+				        Gestione Poli
+				      </div>
+				    </a>
+				</li>
+				<li class="table-view-cell media">
+				    <a class="navigate-right">
+				      <span class="media-object pull-left icon icon-pages"></span>
+				      <div class="media-body">
+				        Logout
+				      </div>
+				    </a>
+				</li>
+			</ul>
 		</div>
 
 		<nav class="bar bar-tab">
