--- a/www/selezionaProfAvvistamento.html
+++ b/www/selezionaProfAvvistamento.html
@@ -39,7 +39,7 @@
 
 		<!-- Title bar -->
 		<header class="bar bar-nav">
-			<a class="icon icon-left-nav pull-left" href="menuNavBar.html"></a>
+			<a class="icon icon-left-nav pull-left" href="index.html"></a>
   			<h2 id="titleNavigation">Seleziona Professori</h2>
 		</header>
 
