fixing fixing fixing

--- a/www/gestione_notifiche.html
+++ b/www/gestione_notifiche.html
@@ -37,8 +37,6 @@
   	<body>
 		<!-- Title bar -->
 		<header class="bar bar-nav">
-		<a id="freccia_indietro" href="menuNavBar.html" data-transition="slide" data-direction="reverse" class="icon icon-left-nav pull-left"></a>
-  			
   			<h1 class="title">Centro Notifiche</h1>
 		</header>
 
@@ -80,27 +78,27 @@
 
 
 		<nav class="bar bar-tab">
-  			<a class="tab-item active" href="navigation.html">
+  			<a class="tab-item active tab-item-selected" href="index.html">
     			<span class="icon icon-home"></span>
-    			<span class="tab-label">Home</span>
   			</a>
 			<a class="tab-item" href="profile.html">
-				<span class="icon icon-person"></span>
-			    <span class="tab-label">Profilo</span>
+				<span class="icon icon-compose"></span>
 			</a>
-			<a class="tab-item" href="#">
-				<span class="icon icon-search"></span>
-			    <span class="tab-label">Cerca</span>
+
+			<a class="tab-item" href="gestione_notifiche.html">
+				<span class="media-object">
+					<img src="img/notifiche.png" class="followersImage">
+				</span>
 			</a>
-			<a class="tab-item" href="#">
+			<a class="tab-item" href="listaFollowers.html">
 				<span class="media-object">
 					<img src="img/followers.png" class="followersImage">
 				</span>
-			    <span class="tab-label">Followers</span>
 			</a>
-			<a class="tab-item" href="menuNavBar.html">
-				<span class="icon icon-bars"></span>
-			    <span class="tab-label">Menu</span>
+			<a class="tab-item" href="selezionaProfAvvistamento.html">
+				<span class="media-object">
+					<img src="img/profMirino.png" class="followersImage">
+				</span>
 			</a>
 		</nav>
 
