--- a/www/index.html
+++ b/www/index.html
@@ -128,7 +128,7 @@
 			</div>
 		</div>
 		<nav class="bar bar-tab">
-  			<a class="tab-item active tab-item-selected" href="#">
+  			<a class="tab-item active tab-item-selected" href="index.html">
     			<span class="icon icon-home"></span>
   			</a>
 			<a class="tab-item" href="profile.html">
