--- a/www/listaFollowers.html
+++ b/www/listaFollowers.html
@@ -18,7 +18,7 @@
 		<link href="libs/jquery.mobile.custom/jquery.mobile.custom.theme.min.css" rel="stylesheet">
 		<link href="css/accordion.css" rel="stylesheet">
 		<link href="libs/SnapJs/snap.css" rel="stylesheet">
-		
+
 
 
     	<!-- Include the compiled Ratchet JS -->
@@ -57,36 +57,33 @@
 			<!-- Lista follower Amici -->
 			<div id="lista">
 			</div>
+			<nav class="bar bar-tab">
+				<a class="tab-item active tab-item-selected" href="index.html">
+					<span class="icon icon-home"></span>
+				</a>
+				<a class="tab-item" href="profile.html">
+					<span class="icon icon-compose"></span>
+				</a>
 
-			
-		<!-- Tab Bar -->
-	<nav class="bar bar-tab">
-  			<a class="tab-item active" href="navigation.html">
-    			<span class="icon icon-home"></span>
-    			<span class="tab-label">Home</span>
-  			</a>
-			<a class="tab-item" href="profile.html">
-				<span class="icon icon-person"></span>
-			    <span class="tab-label">Profilo</span>
-			</a>
-			<a class="tab-item" href="ricerca.html">
-				<span class="icon icon-search"></span>
-			    <span class="tab-label">Cerca</span>
-			</a>
-			<a class="tab-item tab-item-selected" href="listaFollowers.html">
-				<span class="media-object">
-					<img src="img/followers.png" class="followersImage">
-				</span>
-			    <span class="tab-label">Followers</span>
-			</a>
-			<a class="tab-item" href="menuNavBar.html">
-				<span class="icon icon-bars"></span>
-			    <span class="tab-label">Menu</span>
-			</a>
-		</nav>
-		
-		
+				<a class="tab-item" href="gestione_notifiche.html">
+					<span class="media-object">
+						<img src="img/notifiche.png" class="followersImage">
+					</span>
+				</a>
+				<a class="tab-item" href="listaFollowers.html">
+					<span class="media-object">
+						<img src="img/followers.png" class="followersImage">
+					</span>
+				</a>
+				<a class="tab-item" href="selezionaProfAvvistamento.html">
+					<span class="media-object">
+						<img src="img/profMirino.png" class="followersImage">
+					</span>
+				</a>
+			</nav>
+
+
 		<script src="js/filtrofollower.js"></script>
-<link href="css/followers.css" rel="stylesheet">
+		<link href="css/followers.css" rel="stylesheet">
   	</body>
 </html>
