--- a/www/selezionaProfAvvistamento.html
+++ b/www/selezionaProfAvvistamento.html
@@ -39,7 +39,6 @@
 
 		<!-- Title bar -->
 		<header class="bar bar-nav">
-			<a class="icon icon-left-nav pull-left" href="index.html"></a>
   			<h2 id="titleNavigation">Seleziona Professori</h2>
 		</header>
 
@@ -73,27 +72,27 @@
 		</div>
 		<!-- Tab Bar -->
 		<nav class="bar bar-tab">
-  			<a class="tab-item" href="#">
+  			<a class="tab-item active tab-item-selected" href="index.html">
     			<span class="icon icon-home"></span>
-    			<span class="tab-label">Home</span>
   			</a>
-			<a class="tab-item" href="#">
-				<span class="icon icon-person"></span>
-			    <span class="tab-label">Profilo</span>
+			<a class="tab-item" href="profile.html">
+				<span class="icon icon-compose"></span>
 			</a>
-			<a class="tab-item" href="#">
-				<span class="icon icon-search"></span>
-			    <span class="tab-label">Cerca</span>
+
+			<a class="tab-item" href="gestione_notifiche.html">
+				<span class="media-object">
+					<img src="img/notifiche.png" class="followersImage">
+				</span>
 			</a>
-			<a class="tab-item active" href="#">
+			<a class="tab-item" href="listaFollowers.html">
 				<span class="media-object">
 					<img src="img/followers.png" class="followersImage">
 				</span>
-			    <span class="tab-label">Followers</span>
 			</a>
-			<a class="tab-item" href="#">
-				<span class="icon icon-bars"></span>
-			    <span class="tab-label">Menu</span>
+			<a class="tab-item" href="selezionaProfAvvistamento.html">
+				<span class="media-object">
+					<img src="img/profMirino.png" class="followersImage">
+				</span>
 			</a>
 		</nav>
 
