--- a/www/selectPole.html
+++ b/www/selectPole.html
@@ -41,15 +41,28 @@
 		</header>
 
 		<div class="content">
-			<div class="card">
+			<div class="card pulito">
 	  			<ul class="table-view">
-					<li class="table-view-cell">Coppito</li>
-					<li class="table-view-cell">Medicina</li>
-					<li class="table-view-cell">Lettere</li>
-					<li class="table-view-cell">Roio</li>
-					<li class="table-view-cell">Accademia</li>
+					<li class="table-view-cell border-top">
+					<img class="media-object pull-left icon icon-polo" src="img/polo.png">
+					<span>Coppito</span>
+					</li>
+					<li class="table-view-cell">
+					<img class="media-object pull-left icon icon-polo">
+					<span>Medicina</span>
+					</li>
+					<li class="table-view-cell">
+					<img class="media-object pull-left icon icon-polo">
+					<span>Lettere</span></li>
+					<li class="table-view-cell">
+					<img class="media-object pull-left icon icon-polo">
+					<span>Roio</span></li>
+					<li class="table-view-cell border-bottom">
+					<img class="media-object pull-left icon icon-polo">
+					<span>Accademia</span></li>
 	  			</ul>
 			</div>
 		</div>
+		<link href="css/select_polo.css" rel="stylesheet">
   	</body>
 </html>
