--- a/www/schedaPolo.html
+++ b/www/schedaPolo.html
@@ -54,9 +54,11 @@
 
 					<li class="table-view-cell pulito">
 						<a class="navigate-right"  href="#" data-transition="slide">
-							<span class="media-object pull-left icon icon-pages"></span>
+							<span class="media-object">
+								<img src="img/menu.png" class="followersImage">
+								Mensa aperta
+							</span>
 							<div class="media-body">
-							Mensa: aperta (vedi menu)
 							</div>
 						</a>
 					</li>
