--- a/www/menuMensa.html
+++ b/www/menuMensa.html
@@ -41,8 +41,8 @@
 
 		<!-- Title bar -->
 		<header class="bar bar-nav">
-  			<a class="icon icon-left-nav pull-left" href="profile.html"></a>
-  			<h1 class="title">Corsi Seguiti</h1>
+  			<a class="icon icon-left-nav pull-left" href="schedaPolo.html"></a>
+  			<h1 class="title">Menu Mensa</h1>
 		</header>
 
 
