--- a/www/schedaPolo.html
+++ b/www/schedaPolo.html
@@ -36,6 +36,7 @@
 
 		<!-- Title bar -->
 		<header class="bar bar-nav">
+			<a class="icon icon-left-nav pull-left" href="lista_poli_per_gestione.html"></a>
   			<h1 class="title">Polo Coppito</h1>
 		</header>
 
@@ -53,7 +54,7 @@
 					</li>
 
 					<li class="table-view-cell pulito">
-						<a class="navigate-right"  href="#" data-transition="slide">
+						<a class="navigate-right"  href="menuMensa.html" data-transition="slide">
 							<span class="media-object">
 								<img src="img/menu.png" class="followersImage">
 								Mensa aperta
@@ -66,7 +67,7 @@
 					<li class="table-view-cell pulito">
 						<a>
 						   <span class="media-object pull-left icon icon-pages"></span>
-							Ricevi Notifiche Status
+							Notifiche Status
 							<div class="toggle">
 								<div class="toggle-handle"></div>
 							</div>
@@ -76,7 +77,8 @@
 					<li class="table-view-cell pulito">
 						<a>
 						   <span class="media-object pull-left icon icon-pages"></span>
-						   	Abilita ambiente intelligente
+						   Ambiente intelligente
+						   <span class="icon icon-info"></span>
 							<div class="toggle">
 								<div class="toggle-handle"></div>
 							</div>
