--- a/www/profile.html
+++ b/www/profile.html
@@ -45,7 +45,7 @@
 			<ul class="table-view">
 				<li class="card pulito">
 					<img class="imageProfile profilo-image" src="img/matteo.jpg">
-						     
+
 				</li>
 
 
@@ -55,7 +55,7 @@
 			<ul class="table-view">
 				  <li class="card pulito">
 
-					  	<ul class="table-view pulito ">
+					  <ul class="table-view pulito ">
 						<li class="table-view-cell pulito">
 						    <a class="navigate-right"  href="selectStatus.html" data-transition="slide">
 						      <span class="media-object pull-left icon icon-gear"></span>
@@ -66,9 +66,9 @@
 						</li>
 
 						<li class="list-position table-view-cell pulito">
-					  
+
 					    	<img class=" icon-position media-object pull-left icon" src="img/position.png">
-					      	<div class="margin-top" class="media-body">
+					      	<div class="margin-top media-body">
 					          Condividi Posizione
 					      	</div>
 							<div class="toggle active"><div class="toggle-handle"></div></div>
