--- a/www/selectStatus.html
+++ b/www/selectStatus.html
@@ -43,7 +43,12 @@
 		<div class="content">
 
 			<ul class="table-view">
-				
+				<li class="table-view-cell media">
+					 <span class="media-object pull-left icon icon-check"></span>
+					 <div class="media-body">
+					   a lezione
+					 </div>
+ 		   		</li>
 				<li class="table-view-cell">in pausa</li>
 				<li class="table-view-cell">a pranzo</li>
 				<li class="table-view-cell">non disturbare</li>
