--- a/www/index.html
+++ b/www/index.html
@@ -41,22 +41,22 @@
   	<body>
 
 		<!-- Title bar -->
-		
+
 		<div class="snap-drawers">
 			<div id="menucanvas" class="snap-drawer snap-drawer-right">
 			</div>
 		</div>
-		
+
 <div id="menu" class="content snap-content">
-		
+
 		<div class="snap-drawers">
 			<div id="contentoffcanvas" class="snap-drawer snap-drawer-right">
 			</div>
 		</div>
-		
+
 		<header class="bar bar-nav">
 			<a id="freccia_indietro" class="icon icon-left-nav pull-left"></a>
-			<a id="menu_btn" class="icon icon-gear pull-right" "></a>
+			<a id="menu_btn" class="icon icon-gear pull-right"></a>
 			<a class="icon icon-search pull-right" href="ricerca.html"></a>
 
   			<h2 id= "titleNavigation" class="titleNavigation">Università dell'Aquila</h2>
@@ -71,7 +71,7 @@
 		  		</div>
 			</div>
 
-		
+
 		<div id="contentmain" class="content snap-content hassubnav">
 
 			<!-- Accordion -->
