--- a/www/index.html
+++ b/www/index.html
@@ -41,9 +41,22 @@
   	<body>
 
 		<!-- Title bar -->
+		
+		<div class="snap-drawers">
+			<div id="menucanvas" class="snap-drawer snap-drawer-right">
+			</div>
+		</div>
+		
+<div id="menu" class="content snap-content">
+		
+		<div class="snap-drawers">
+			<div id="contentoffcanvas" class="snap-drawer snap-drawer-right">
+			</div>
+		</div>
+		
 		<header class="bar bar-nav">
 			<a id="freccia_indietro" class="icon icon-left-nav pull-left"></a>
-			<a class="icon icon-gear pull-right" href="menuNavBar.html"></a>
+			<a id="menu_btn" class="icon icon-gear pull-right" "></a>
 			<a class="icon icon-search pull-right" href="ricerca.html"></a>
 
   			<h2 id= "titleNavigation" class="titleNavigation">Università dell'Aquila</h2>
@@ -58,10 +71,7 @@
 		  		</div>
 			</div>
 
-		<div class="snap-drawers">
-			<div id="contentoffcanvas" class="snap-drawer snap-drawer-right">
-			</div>
-		</div>
+		
 		<div id="contentmain" class="content snap-content hassubnav">
 
 			<!-- Accordion -->
@@ -127,11 +137,12 @@
 			    </div>
 			</div>
 		</div>
-<<<<<<< HEAD
+		</div>
+
 
 		<!-- Tab Bar -->
-=======
->>>>>>> branch 'master' of https://github.com/NetRider/Univaqino-Mockup.git
+
+
 		<nav class="bar bar-tab">
   			<a class="tab-item active tab-item-selected" href="index.html">
     			<span class="icon icon-home"></span>
@@ -156,11 +167,7 @@
 				</span>
 			</a>
 		</nav>
-<<<<<<< HEAD
-=======
 
-
->>>>>>> branch 'master' of https://github.com/NetRider/Univaqino-Mockup.git
   	</body>
 	<script src="js/navigation.js"></script>
 </html>
