--- a/www/menu.html
+++ b/www/menu.html
@@ -4,8 +4,8 @@
 			<li class="table-view-cell media">
 				   <a id="close_menu" class="icon icon-left-nav pull-left">
 				      
-				      <div class="media-body pull-right">
-				        MENU
+				      <div id="menu-title" class="media-body pull-right">
+				        Menu
 				      </div>
 				    </a>
 	  			</li>
