--- a/www/FollowerProf.html
+++ b/www/FollowerProf.html
@@ -4,7 +4,7 @@
 	    			<li class="table-view-cell table-view-divider">Professori</li>
 
 	    			<li class="table-view-cell media">
-			    		<a class="navigate-right" href="profile_prof_visitato.html">
+			    		<a class="navigate-right" data-ignore="push" data-transition="slide" href="profile_prof_visitato.html">
 				      		<img class="media-object pull-left cardImage" src="img/manes.jpg">
 							<div class="media-body">Costanzo Manes</div>
 							<div>
