--- a/www/corsiProf.html
+++ b/www/corsiProf.html
@@ -36,7 +36,7 @@
 
 		<!-- Title bar -->
 		<header class="bar bar-nav">
-  			<a class="icon icon-left-nav pull-left" href="profile_prof_visitato.html" data-transition="slide" data-direction="reverse"></a>
+  			<a class="icon icon-left-nav pull-left" data-ignore="push" href="profile_prof_visitato.html" data-transition="slide" data-direction="reverse"></a>
   			<h1 class="title">Corsi Tenuti</h1>
 		</header>
 
