--- a/www/gestisci_notifiche_prof.html
+++ b/www/gestisci_notifiche_prof.html
@@ -36,6 +36,8 @@
   	<body>
 		<!-- Title bar -->
 		<header class="bar bar-nav">
+			<a class="icon icon-left-nav pull-left" data-ignore="push" href="profile_prof_visitato.html" data-transition="slide" data-direction="reverse"></a>
+  			
   			<h1 class="title">Notifiche</h1>
 		</header>
 
