--- a/www/iscrittiCorso.html
+++ b/www/iscrittiCorso.html
@@ -41,7 +41,7 @@
 
 		<!-- Title bar -->
 		<header class="bar bar-nav">
-			<a id="freccia_indietro" class="icon icon-left-nav pull-left" href="ricerca.html" data-transition="slide" data-direction="reverse"></a>
+			<a id="freccia_indietro" class="icon icon-left-nav pull-left" data-ignore="push" href="ricerca.html" data-transition="slide" data-direction="reverse"></a>
   			<h2 id= "titleNavigation" class="titleNavigation">Follower Iscritti</h2>
 		</header>
 		<div class="snap-drawers">
