--- a/www/menu.html
+++ b/www/menu.html
@@ -11,7 +11,7 @@
 	  			</li>
 			
 				<li class="table-view-cell media">
-				    <a class="navigate-right" href="profile.html">
+				    <a class="navigate-right" data-ignore="push" href="profile.html">
 				      <span class="media-object pull-left icon icon-gear"></span>
 				      <div class="media-body">
 				        Gestione Profilo
@@ -19,7 +19,7 @@
 				    </a>
 	  			</li>
 				<li class="table-view-cell media">
-				    <a class="navigate-right" href="lista_poli_per_gestione.html">
+				    <a class="navigate-right" data-ignore="push" href="lista_poli_per_gestione.html">
 				      <span class="media-object pull-left icon icon-gear"></span>
 				      <div class="media-body">
 				        Gestione Poli
