--- a/www/profile_prof_visitato_from_ricerca.html
+++ b/www/profile_prof_visitato_from_ricerca.html
@@ -36,7 +36,7 @@
 
 		<!-- Title bar -->
 		<header class="bar bar-nav">
-			<a class="icon icon-left-nav pull-left" data-ignore="push" data-transition="slide" data-direction="reverse" href="listaFollowers.html"></a>
+			<a class="icon icon-left-nav pull-left" data-ignore="push" data-transition="slide" data-direction="reverse" href="ricerca.html"></a>
   			<h1 class="title">Costanzo Manes</h1>
 		</header>
 
