--- a/www/schedaPolo.html
+++ b/www/schedaPolo.html
@@ -36,7 +36,7 @@
 
 		<!-- Title bar -->
 		<header class="bar bar-nav">
-			<a class="icon icon-left-nav pull-left" href="lista_poli_per_gestione.html"></a>
+			<a class="icon icon-left-nav pull-left" data-ignore="push" data-transition="slide" data-direction="reverse" href="lista_poli_per_gestione.html"></a>
   			<h1 class="title">Polo Coppito</h1>
 		</header>
 
@@ -54,7 +54,7 @@
 					</li>
 
 					<li class="table-view-cell pulito">
-						<a class="navigate-right"  href="menuMensa.html" data-transition="slide">
+						<a class="navigate-right" data-ignore="push" data-transition="slide" href="menuMensa.html" data-transition="slide">
 							<span class="media-object">
 								<img src="img/menu.png" class="followersImage">
 								Mensa aperta
