--- a/www/FollowerAmici.html
+++ b/www/FollowerAmici.html
@@ -3,7 +3,7 @@
 	  			<ul class="table-view">
 	    			<li class="table-view-cell table-view-divider">Amici</li>
 	  				<li class="table-view-cell media">
-	    				<a href="profile_visitato.html" class="navigate-right frecciaProfilo">
+	    				<a href="profile_visitato.html" data-ignore="push" data-transition="slide" class="navigate-right frecciaProfilo">
 		      				<img class="media-object pull-left cardImage" src="img/matteo.jpg">
 			      			<div class="media-body">Matteo Polsinelli</div>
 							<div>
