--- a/www/corsiSeguiti.html
+++ b/www/corsiSeguiti.html
@@ -41,7 +41,7 @@
 
 		<!-- Title bar -->
 		<header class="bar bar-nav">
-  			<a class="icon icon-left-nav pull-left" href="profile.html"></a>
+  			<a class="icon icon-left-nav pull-left" data-ignore="push" href="profile.html" data-transition="slide" data-direction="reverse"></a>
   			<h1 class="title">Corsi Seguiti</h1>
 		</header>
 		<div class="snap-drawers">
@@ -50,7 +50,7 @@
 		</div>
 
 
-		<div id="contentmain" class="content snap-content">
+		<div id="filtroCorsi" class="content snap-content">
 			<div class="filter">
 				<div class="segmented-control">
 				    <a id="anno1" class="control-item active">1° anno</a>
@@ -66,30 +66,30 @@
 		</div>
 			
 		<!-- Tab Bar -->
-		<nav class="bar bar-tab">
-  			<a class="tab-item" href="#">
-    			<span class="icon icon-home"></span>
-    			<span class="tab-label">Home</span>
-  			</a>
-			<a class="tab-item" href="#">
-				<span class="icon icon-person"></span>
-			    <span class="tab-label">Profilo</span>
-			</a>
-			<a class="tab-item" href="#">
-				<span class="icon icon-search"></span>
-			    <span class="tab-label">Cerca</span>
-			</a>
-			<a class="tab-item active" href="#">
-				<span class="media-object">
-					<img src="img/followers.png" class="followersImage">
-				</span>
-			    <span class="tab-label">Followers</span>
-			</a>
-			<a class="tab-item" href="#">
-				<span class="icon icon-bars"></span>
-			    <span class="tab-label">Menu</span>
-			</a>
-		</nav>
+			<nav class="bar bar-tab">
+	  			<a class="tab-item active " data-ignore="push" href="index.html">
+	    			<span class="icon icon-home"></span>
+	  			</a>
+				<a class="tab-item tab-item-selected" data-ignore="push" href="profile.html">
+					<span class="icon icon-compose"></span>
+				</a>
+
+				<a class="tab-item" data-ignore="push" href="gestione_notifiche.html">
+					<span class="media-object">
+						<img src="img/notifiche.png" class="followersImage">
+					</span>
+				</a>
+				<a class="tab-item" data-ignore="push" href="listaFollowers.html">
+					<span class="media-object">
+						<img src="img/followers.png" class="followersImage">
+					</span>
+				</a>
+				<a class="tab-item" data-ignore="push" href="selezionaProfAvvistamento.html">
+					<span class="media-object">
+						<img src="img/profMirino.png" class="followersImage">
+					</span>
+				</a>
+			</nav>
 		<script src="js/filtroCorsi.js"></script>
   	</body>
 </html>
