--- a/www/cronologia_notifiche_followers.html
+++ b/www/cronologia_notifiche_followers.html
@@ -37,11 +37,11 @@
   	<body>
 		<!-- Title bar -->
 		<header class="bar bar-nav">
-		<a id="freccia_indietro" class="icon icon-left-nav pull-left" href="gestione_notifiche.html" data-transition="slide" data-direction="reverse"></a>
+		<a id="freccia_indietro" class="icon icon-left-nav pull-left" data-ignore="push" href="gestione_notifiche.html" data-transition="slide" data-direction="reverse"></a>
   			<h1 class="title">Cronologia</h1>
 		</header>
 
-			<div class="content spazio-nav">
+			<div id="gestione_notifiche" class="content spazio-nav">
 			<div class="card">
 	  			<ul id="slippylist" class="table-view">
 	    			<li class="table-view-cell table-view-divider">Followers
@@ -164,35 +164,36 @@
 			  		</li>
 	  			</ul>
 			</div>
+			<link href="css/gestione_notifiche.css" rel="stylesheet">
 		</div>
 
 
-		<nav class="bar bar-tab">
-  			<a class="tab-item active tab-item-selected" href="index.html">
-    			<span class="icon icon-home"></span>
-  			</a>
-			<a class="tab-item" href="profile.html">
-				<span class="icon icon-compose"></span>
-			</a>
+			<nav class="bar bar-tab">
+	  			<a class="tab-item active " data-ignore="push" href="index.html">
+	    			<span class="icon icon-home"></span>
+	  			</a>
+				<a class="tab-item " data-ignore="push" href="profile.html">
+					<span class="icon icon-compose"></span>
+				</a>
 
-			<a class="tab-item" href="gestione_notifiche.html">
-				<span class="media-object">
-					<img src="img/notifiche.png" class="followersImage">
-				</span>
-			</a>
-			<a class="tab-item" href="listaFollowers.html">
-				<span class="media-object">
-					<img src="img/followers.png" class="followersImage">
-				</span>
-			</a>
-			<a class="tab-item" href="selezionaProfAvvistamento.html">
-				<span class="media-object">
-					<img src="img/profMirino.png" class="followersImage">
-				</span>
-			</a>
-		</nav>
+				<a class="tab-item tab-item-selected" data-ignore="push" href="gestione_notifiche.html">
+					<span class="media-object">
+						<img src="img/notifiche.png" class="followersImage">
+					</span>
+				</a>
+				<a class="tab-item" data-ignore="push" href="listaFollowers.html">
+					<span class="media-object">
+						<img src="img/followers.png" class="followersImage">
+					</span>
+				</a>
+				<a class="tab-item" data-ignore="push" href="selezionaProfAvvistamento.html">
+					<span class="media-object">
+						<img src="img/profMirino.png" class="followersImage">
+					</span>
+				</a>
+			</nav>
 		<script src="libs/SlipJs/slip.js"></script>
 <script src="js/gestione_notifiche.js"></script>
-<link href="css/gestione_notifiche.css" rel="stylesheet">
+
   	</body>
 </html>
