--- a/www/gestione_notifiche.html
+++ b/www/gestione_notifiche.html
@@ -45,21 +45,21 @@
 			<ul class="table-view">
   				<li class="table-view-cell">
 
-    			   <a class="navigate-right" href="cronologia_notifiche_followers.html" data-transition="slide">
+    			   <a class="navigate-right" data-ignore="push" href="cronologia_notifiche_followers.html" data-transition="slide">
     			   <span class="badge">10</span>
    				   POLO
     			   </a>
 			    </li>
                 <li class="table-view-cell">
 
-                   <a class="navigate-right" href="cronologia_notifiche_followers.html" data-transition="slide">
+                   <a class="navigate-right" data-ignore="push" href="cronologia_notifiche_followers.html" data-transition="slide">
                    <span class="badge">3</span>
      				 EDIFICIO
   				   </a>
 			  </li>
  		  	 <li class="table-view-cell">
 
-   		 			 <a class="navigate-right" href="cronologia_notifiche_followers.html" data-transition="slide">
+   		 			 <a class="navigate-right" data-ignore="push" href="cronologia_notifiche_followers.html" data-transition="slide">
 
    		 			 <span class="badge">7</span>
     				  FOLLOWERS
@@ -67,7 +67,7 @@
 			  </li>
 			  <li class="table-view-cell">
 
-   		 			 <a class="navigate-right" href="cronologia_notifiche_followers.html">
+   		 			 <a class="navigate-right" data-ignore="push" href="cronologia_notifiche_followers.html" data-transition="slide">
    		 			 	<span class="badge">6</span>
     				  PROFESSORI
   					  </a>
@@ -77,29 +77,29 @@
 		</div>
 
 		<nav class="bar bar-tab">
-  			<a class="tab-item active tab-item-selected" href="index.html">
-    			<span class="icon icon-home"></span>
-  			</a>
-			<a class="tab-item" href="profile.html">
-				<span class="icon icon-compose"></span>
-			</a>
+	  			<a class="tab-item active " data-ignore="push" href="index.html">
+	    			<span class="icon icon-home"></span>
+	  			</a>
+				<a class="tab-item " data-ignore="push" href="profile.html">
+					<span class="icon icon-compose"></span>
+				</a>
 
-			<a class="tab-item" href="gestione_notifiche.html">
-				<span class="media-object">
-					<img src="img/notifiche.png" class="followersImage">
-				</span>
-			</a>
-			<a class="tab-item" href="listaFollowers.html">
-				<span class="media-object">
-					<img src="img/followers.png" class="followersImage">
-				</span>
-			</a>
-			<a class="tab-item" href="selezionaProfAvvistamento.html">
-				<span class="media-object">
-					<img src="img/profMirino.png" class="followersImage">
-				</span>
-			</a>
-		</nav>
+				<a class="tab-item tab-item-selected" data-ignore="push" href="gestione_notifiche.html">
+					<span class="media-object">
+						<img src="img/notifiche.png" class="followersImage">
+					</span>
+				</a>
+				<a class="tab-item" data-ignore="push" href="listaFollowers.html">
+					<span class="media-object">
+						<img src="img/followers.png" class="followersImage">
+					</span>
+				</a>
+				<a class="tab-item" data-ignore="push" href="selezionaProfAvvistamento.html">
+					<span class="media-object">
+						<img src="img/profMirino.png" class="followersImage">
+					</span>
+				</a>
+			</nav>
 
   	</body>
 </html>
