--- a/www/ricerca.html
+++ b/www/ricerca.html
@@ -37,7 +37,7 @@
   	<body>
 		<!-- Title bar -->
 		<header class="bar bar-nav">
-		<a class="icon icon-left-nav pull-left" href="index.html"></a>
+		<a class="icon icon-left-nav pull-left" data-ignore="push" data-transition="slide" href="index.html"></a>
 		 <h1 class="title">Ricerca</h1>
 		</header>
 
@@ -45,7 +45,7 @@
 
 
 
-		<div class="content spazio-nav">
+		<div id="ricerca" class="content spazio-nav">
 
 
 			<li class="table-view-cell table-view-divider">
@@ -68,10 +68,11 @@
 				</div>
 
     		</div>
+    		<script src="js/ricerca.js"></script>
+		<link href="css/ricerca.css" rel="stylesheet">
 		</div>
 
 
-		<script src="js/ricerca.js"></script>
-		<link href="css/ricerca.css" rel="stylesheet">
+		
   	</body>
 </html>
