--- a/www/selezionaProfAvvistamento.html
+++ b/www/selezionaProfAvvistamento.html
@@ -48,7 +48,7 @@
 	    			<li class="table-view-cell table-view-divider">Professori</li>
 
 	    			<li class="table-view-cell media">
-			    		<a class="navigate-right" href="selezionaProfPosizione.html">
+			    		<a class="navigate-right" data-ignore="push" data-transition="slide" href="selezionaProfPosizione.html">
 				      		<img class="media-object pull-left cardImage" src="img/manes.jpg">
 							<div class="media-body">Costanzo Manes</div>
 							<div>
@@ -72,29 +72,29 @@
 		</div>
 		<!-- Tab Bar -->
 		<nav class="bar bar-tab">
-  			<a class="tab-item active tab-item-selected" href="index.html">
-    			<span class="icon icon-home"></span>
-  			</a>
-			<a class="tab-item" href="profile.html">
-				<span class="icon icon-compose"></span>
-			</a>
+	  			<a class="tab-item active " data-ignore="push" href="index.html">
+	    			<span class="icon icon-home"></span>
+	  			</a>
+				<a class="tab-item " data-ignore="push" href="profile.html">
+					<span class="icon icon-compose"></span>
+				</a>
 
-			<a class="tab-item" href="gestione_notifiche.html">
-				<span class="media-object">
-					<img src="img/notifiche.png" class="followersImage">
-				</span>
-			</a>
-			<a class="tab-item" href="listaFollowers.html">
-				<span class="media-object">
-					<img src="img/followers.png" class="followersImage">
-				</span>
-			</a>
-			<a class="tab-item" href="selezionaProfAvvistamento.html">
-				<span class="media-object">
-					<img src="img/profMirino.png" class="followersImage">
-				</span>
-			</a>
-		</nav>
+				<a class="tab-item" data-ignore="push" href="gestione_notifiche.html">
+					<span class="media-object">
+						<img src="img/notifiche.png" class="followersImage">
+					</span>
+				</a>
+				<a class="tab-item tab-item-selected" data-ignore="push" href="listaFollowers.html">
+					<span class="media-object">
+						<img src="img/followers.png" class="followersImage">
+					</span>
+				</a>
+				<a class="tab-item" data-ignore="push" href="selezionaProfAvvistamento.html">
+					<span class="media-object">
+						<img src="img/profMirino.png" class="followersImage">
+					</span>
+				</a>
+			</nav>
 
   	</body>
 
